--- a/index.html
+++ b/index.html
@@ -241,10 +241,14 @@ setInterval(() => {
 const currDate=Date.now()
 const wishDate=new Date("10 september 2021 00:00:00")
 const diff=(wishDate-currDate)
-const dd=(Math.floor(diff/1000/60/60/24))
-const hh=(Math.floor(diff/1000/60/60)%24)
-const mm=(Math.floor(diff/1000/60)%60)
-const ss=(Math.floor(diff/1000)%60)
+// const dd=(Math.floor(diff/1000/60/60/24))
+// const hh=(Math.floor(diff/1000/60/60)%24)
+// const mm=(Math.floor(diff/1000/60)%60)
+// const ss=(Math.floor(diff/1000)%60)
+const dd=0;
+const hh=0;
+const mm=0;
+const ss=0;
 day.innerHTML=dd<10?"0"+dd:dd
 hour.innerHTML=hh<10?"0"+hh:hh
 minute.innerHTML=mm<10?"0"+mm:mm
