--- a/index.html
+++ b/index.html
@@ -618,19 +618,19 @@ if (dd>100) {
   <section id="sponsors" class="customer-logos slider">
     <div class="slide"><img src="images/jiitosa.jpeg" alt=""></div>
     <div class="slide"><img src="images/taskade.jpeg" alt="logo"></div>
-    <div class="slide"><img src="images/prep bytes.jpeg" alt="logo"></div>
+    <div class="slide"><img src="images/prep bytes.jpeg" href="https://prepbytes.com/" alt="logo"></div>
     <div class="slide"><img src="images/hover robotix.jpeg" alt="logo"></div>
-    <div class="slide"><img src="images/programming pathshala.jpeg" alt="logo"></div>
+    <div class="slide"><img src="images/programming pathshala.jpeg" href="https://programmingpathshala.com/" alt="logo"></div>
     <div class="slide"><img src="images/repl.jpeg" alt="logo"></div>
     <div class="slide"><img src="images/rosenfeld.jpeg" alt="logo"></div>
     <div class="slide"><img src="images/jet brains.jpeg" alt="logo"></div>
-    <div class="slide"><img src="images/coding blocks.jpeg" alt=""></div>
-    <div class="slide"><img src="images/xyz logo.jpeg" alt=""></div>
+    <div class="slide"><img src="images/coding blocks.jpeg" href="https://codingblocks.com/" alt=""></div>
+    <div class="slide"><img src="images/xyz logo.jpeg" href="https://gen.xyz/" alt=""></div>
     <div class="slide"><img src="images/snapchat.jpeg" alt=""></div>
-    <div class="slide"><img src="images/geeks for geeks.jpeg" alt=""></div>
+    <div class="slide"><img src="images/geeks for geeks.jpeg" href="https://geeksforgeeks.org/" alt=""></div>
     <div class="slide"><img src="images/balsamiq.jpeg" alt=""></div>
-    <div class="slide"><img src="images/code for cause.jpeg" alt=""></div>
-    <div class="slide"><img src="images/coding ninjas.jpeg" alt=""></div>
+    <div class="slide"><img src="images/code for cause.jpeg" href="https://codeforcause.org/" alt=""></div>
+    <div class="slide"><img src="images/coding ninjas.jpeg" href="https://codingninjas.com/" alt=""></div>
 
   </section>
 
