--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@ if (dd>100) {
     <div class="slide"><img src="images/repl.jpeg" alt="logo"></div>
     <div class="slide"><img src="images/rosenfeld.jpeg" alt="logo"></div>
     <div class="slide"><img src="images/jet brains.jpeg" alt="logo"></div>
-    <div class="slide"><img src="images/coding blocks.jpeg" href="https://codingblocks.com/" alt=""></div>
+    <div class="slide">< a href="https://codingblocks.com/"><img src="images/coding blocks.jpeg"  alt=""></a></div>
     <div class="slide"><img src="images/xyz logo.jpeg" href="https://gen.xyz/" alt=""></div>
     <div class="slide"><img src="images/snapchat.jpeg" alt=""></div>
     <div class="slide"><img src="images/geeks for geeks.jpeg" href="https://geeksforgeeks.org/" alt=""></div>
